<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Portable Presentations</string>
    <string name="action1">Play</string>
    <string name="action2">Undo</string>
    <string name="action3">Redo</string>
    <string name="action4">Slower</string>
    <string name="action5">Faster</string>
    <string name="action6">Pause</string>
    <string name="action7">Image</string>
    <string name="action8">Text</string>
    <string name="action9">Pen</string>
    <string name="action10">Eraser</string>
    <string name="action11">Load</string>
    <string name="action12">Clear</string>
    <string name="action13">Save</string>
    <string name="action14">NewSlide</string>
    <string name="action15">NewPresentation</string>
    <string name="optionsText">Options</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="drawButtonTextString">Use S-Pen to Draw Mode</string>
    <string name="textButtonTextString">Insert a Text Box</string>
    <string name="pictureButtonTextString">Insert an Image</string>
    <string name="eraseButtonTextString">Set S-Pen to Eraser Mode</string>
    <string name="cancelButtonTextString">Exit Options</string>
    <string name="saveButtonTextString">Save As PNG File</string>
    <string name="clearButtonTextString">Clear the Screen</string>
    <string name="loadButtonTextString">Load a previous slide</string>    
    <string name="undoButtonTextString">Undo a previous command</string>
    <string name="exportButtonTextString">Export project to png files</string>
    <string name="delPresButtonTextString">Deletes the selected presentation</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_display_file">Files</string>
    <string name="penSettingsText">Pen Settings</string>
    <string name="selectorModeText">Selector Mode</string>
    <string name="groupText">Group Objects</string>
    <string name="ungroupText">Ungroup Objects</string>
    <string name="voiceOverText">Record Voice-Over</string>
    <string name="playText">Play</string>
    
    <string name="selectorButtonTextString">Opens Selecter Tool</string>
    <string name="groupButtonTextString">Group selected  items into one item</string>
    <string name="ungroupButtonTextString">Ungroup selected item into seperate items</string>
    <string name="slowText">Decrease Animation Speed</string>
    <string name="fastText">Increase Animationn Speed</string>

</resources>