<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/action1"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action7"/>
    
    <item
        android:id="@+id/action2"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/action8"/>
    
    <item
        android:id="@+id/action3"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/action9"/>
    
    <item
        android:id="@+id/action4"
        android:orderInCategory="103"
        android:showAsAction="always"
        android:title="@string/action10"/>
    
    <item
        android:id="@+id/action5"
        android:orderInCategory="104"
        android:showAsAction="always"
        android:title="@string/action11"/>
    
    <item
        android:id="@+id/action6"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/action13"/>
    
    <item
        android:id="@+id/action8"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/action14"/>
    
     <item
        android:id="@+id/action9"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/action15"/>
    
    <item
        android:id="@+id/action7"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/action12"/>
    
  <!--  <item
        android:id="@+id/action7"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/action7"/>
    
    <item
        android:id="@+id/action8"
        android:orderInCategory="107"
        android:showAsAction="never"
        android:title="@string/action8"/>
    
    <item
        android:id="@+id/action9"
        android:orderInCategory="108"
        android:showAsAction="never"
        android:title="@string/action9"/>
    
    <item
        android:id="@+id/action10"
        android:orderInCategory="109"
        android:showAsAction="never"
        android:title="@string/action10"/>
   -->  
    <item
        android:id="@+id/options"
        android:orderInCategory="119"
        android:showAsAction="never"
        android:title="@string/optionsText"/>
    
    <item
        android:id="@+id/penSettings"
        android:orderInCategory="119"
        android:showAsAction="never"
        android:title="@string/penSettingsText"/> 
    
</menu>